infra/dev/init_container.yaml
apiVersion: apps/v1 ## Chainlink Node
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      volumes:
        - name: shared-data
          hostPath:
            path: /usr/src/shared-data

      containers:
        - name: ubuntu
          image: ubuntu:latest
          command: ["/bin/sh", "-c"]
          args: ["apt-get update && /bin/sleep 3650d"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-data
              mountPath: $HOME/
      restartPolicy: Always
