infra/dev/pod-ganache.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ganache-node
spec:
  containers:
  - name: ganache-node
    image: darchlabs/node-ethereum-dev
    imagePullPolicy: Never
    ports:
    - containerPort: 8545
