infra/dev/chainlink.yaml
# Service to reach postgres db
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
              name: postgres

          volumeMounts:
            - name: postgres-db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-db
          hostPath:
            path: /mnt/data/postgres-db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainlink-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chainlink-node
  template:
    metadata:
      labels:
        app: chainlink-node
    spec:
      containers:
        - name: chainlink-node
          image: smartcontract/chainlink:1.13.1-root
          args: ["node", "start", "--password",  "/chainlink/password.txt", "--api", "/chainlink/creds.txt"]
          ports:
            - containerPort: 6688
              name: chainlink-node
          volumeMounts:
            - name: shared-data
              mountPath: /chainlink

      volumes:
        - name: shared-data
          hostPath:
            path: /mnt/data/shared-data

---

apiVersion: v1
kind: Service
metadata:
  name: chainlink-node
spec:
  selector:
    app: chainlink-node
  ports:
    - protocol: TCP
      port: 6688
      targetPort: 6688
  type: LoadBalancer
