infra/dev/deployment.yaml
## Service for postgres
apiVersion: v1
kind: Service
metadata:
  name: postgres-node
spec:
  selector:
    app: postgres-node
  type: ClusterIP
  ports:
    - protocol: TCP
      name: "tcp"
      port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-node
  template:
    metadata:
      labels:
        app: postgres-node
    spec:
      containers:
        - name: postgres-node
          image: postgres:13
          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-db-node
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-db-node
          hostPath:
            path: /mnt/data/postgres-db-node

---

apiVersion: v1
kind: Service
metadata:
  name: nodes
spec:
  selector:
    app: nodes
  type: ClusterIP
  ports:
  - port: 6969
    name: "http"
    targetPort: 6969
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodes
spec:
  selector:
    matchLabels:
      app: nodes
  template:
    metadata:
      labels:
        app: nodes
    spec:
      volumes:
        - name: nodes-pvc
          persistentVolumeClaim:
            claimName: nodes-pvc

      containers:
      - name: nodes
        image: darchlabs/nodes:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 6969
        readinessProbe:
          httpGet:
            path: /api/v2/health
            port: 6969
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 6969
          initialDelaySeconds: 1
          periodSeconds: 5
        volumeMounts:
          - name: nodes-pvc
            mountPath: /home/nodes/data
