infra/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: darch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              name: http
      - path: /build
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              name: http
      - path: /nodes(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nodes
            port:
              name: http
